Project cleanups
- Use Tycho 5.0.1.
- Use CBI 1.5.3.
- Remove unused m2e nature/builder.
- Build into a build.log and .gitignore it.
- Generate a reduced target platform with more permanent update sites.
- Eliminate warnings.
- Regenerate with latest xtend.
- Use specifically JustJ 21.